--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -111,6 +111,13 @@ input, select {
     vertical-align:middle;
 }
 
+h1 { font-size: 1.6em; padding: 6px 0; }
+h2 { font-size: 1.5em; padding: 5px 2px; }
+h3 { font-size: 1.4em; padding: 4px 4px; }
+h4 { font-size: 1.3em; padding: 3px 6px; }
+h5 { font-size: 1.2em; padding: 2px 8px; }
+h6 { font-size: 1.1em; padding: 1px 10px; }
+
 body, html { height: 100%; overflow: auto; }
 body { background: url('/images/mainbg.png'); }
 
@@ -126,6 +133,7 @@ body { background: url('/images/mainbg.png'); }
 .popup_message.failure .dismiss_me { color: #822323; }
 .popup_message.success { z-index: 200000; color: rgba(255, 255, 255, 0.9); background-color: #555; }
 .popup_message.success .dismiss_me { color: #FFF; }
+.faded_out { color: #777; }
 
 #fullpage_backdrop ul.duplicate_issues { list-style-type: none; padding: 0; margin: 0; clear: both; }
 #fullpage_backdrop ul.duplicate_issues li { font-weight: normal; margin: 0 0 3px 0; text-align: left; }
@@ -538,3 +546,118 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 }
 /*.button-orange:active { background: #f09c15; }*/
 /*----------------------------*/
+
+.profile-intro { font-size: 1.2em; padding: 5px; color: #555; font-weight: normal; }
+
+.character_setup { color: #444; }
+.character_setup label { float: left; padding: 4px 4px 4px 0; }
+#character_name_input { padding: 4px; width: 300px; }
+.character_setup input[type="submit"] { padding: 3px; font-weight: bold; }
+
+.cards { overflow: visible; padding: 0; height: 200px; list-style: none; margin: 0; }
+li.card {
+    z-index: 5;
+    float: left;
+    background: url('/images/cardbg.png') no-repeat -1px -1px;
+    color: black;
+    text-shadow: 1px 1px 0px #AAA;
+    border-width: 3px;
+    border-style: double;
+    border-color: #CCA;
+    cursor: pointer;
+    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+    padding: 3px;
+    width: 190px;
+    height: 290px;
+    position: relative;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+    margin-right: 5px;
+}
+.stacked li.card, .stacked li.card:hover {
+    margin-right: -155px;
+}
+li.card.flipped {
+    background: url('/images/card_flipside.png') no-repeat -2px -2px;
+}
+
+li.card.flipped.small {
+    background: url('/images/card_flipside_small.png') no-repeat top left;
+}
+
+li.card.flipped .picture, li.card.flipped .hp, li.card.flipped .ep, li.card.flipped .name, li.card.flipped .level, li.card.flipped .faction, li.card.flipped .special, li.card.flipped .item, li.card.flipped .attacks, li.card.flipped .cost, li.card.flipped .points { display: none; }
+
+li.card.small {
+    width: 72px;
+    height: 110px;
+    margin-right: 5px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5); -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5); -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+}
+.stacked li.card.small, .stacked li.card.small:hover {
+    margin-right: -60px;
+}
+
+li.card:hover { margin-right: 0; }
+li.card.unselectable:hover, li.card.picked.small:hover { margin-right: -155px; }
+
+li.card.opponent { cursor: default; }
+li.card.picked { margin-top: -40px; }
+li.card.small.picked { margin-top: 10px; }
+li.card.flipped.picked { margin-top: 10px; }
+li.card.nohide { margin-right: 5px; }
+
+li.card .name { text-shadow: 1px 1px 0px #EEE; font-size: 17px; font-weight: bold; color: #000; }
+li.card.small .name { text-shadow: 1px 1px 0px #EEE; font-size: 10px; font-weight: normal; color: #000; }
+li.card .level { position: absolute; padding: 0; line-height: 1; top: 0; right: 5px; font-size: 35px; font-weight: normal; text-shadow: 2px 2px 3px #666; color: #fdff82; }
+li.card.small .level { right: 3px; top: 15px; font-size: 14px; font-weight: normal; text-shadow: 1px 1px 0px #666; color: #fdff82; }
+
+li.card .hp, li.card.mine .card_damage { position: absolute; width: 50px; height: 35px; z-index: 10; padding: 6px 0 0 0; text-align: center; line-height: 1; bottom: 0px; left: 0px; font-size: 27px; font-weight: normal; text-shadow: 1px 1px 2px #666; color: #FFF; background: url('heart_small.png') no-repeat top left; }
+li.card.mine .card_damage { background: transparent; position: absolute; width: 150px; left: -50px; color: red; text-align: center; z-index: 1000; text-shadow: 2px 2px 4px darkred; }
+li.card .ep { position: absolute; width: 50px; height: 35px; z-index: 10; padding: 6px 0 0 0; text-align: center; line-height: 1; bottom: 0px; left: 40px; font-size: 27px; font-weight: normal; text-shadow: 1px 1px 2px #666; color: #FFF; background: url('magic_small.png') no-repeat top left; }
+li.card.small .hp { top: 35px; left: 0; height: 50px; font-size: 22px; padding-top: 12px; }
+li.card.opponent .hp, li.card.opponent .card_damage { top: 180px; left: 70px; padding-top: 8px; height: 50px; font-size: 27px; }
+li.card.opponent .card_damage { position: absolute; color: red; width: 150px; left: 20px; text-align: center; top: 177px; z-index: 1000; text-shadow: 2px 2px 4px darkred; }
+li.card.small.opponent .hp { top: 40px; left: 13px; height: 50px; font-size: 22px; padding-top: 12px; }
+li.card.small .ep { top: 35px; left: 30px; height: 50px; font-size: 22px; padding-top: 12px; }
+
+li.card .picture {
+    width: 190px;
+    height: 105px;
+    margin-left: 0;
+    margin-bottom: 0;
+    overflow: hidden;
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2); -webkit-box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2); -moz-box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+}
+
+#opponents_hand { display: none; }
+
+li.card.small .picture, li.card.small .description, li.card.small .special, li.card.small .attacks, li.card.small .item, li.card.small .cost { display: none; }
+li.card .faction { font-size: 14px; font-weight: normal; line-height: 1; margin-bottom: 3px; }
+li.card.small .faction { font-size: 10px; font-weight: normal; }
+li.card.faction_rutai .faction { color: blue; }
+li.card.faction_resistance .faction { color: red; }
+li.card.faction_neutrals .faction { color: white; font-weight: bold; }
+li.card .description { font-weight: normal; font-size: 12px; }
+li.card .special, li.card .attacks { font-weight: normal; margin-top: 5px; font-size: 13px; }
+li.card .special .entry { font-weight: normal; height: 17px; clear: both; }
+li.card .attacks .entry { font-weight: normal; height: 30px; clear: both; }
+li.card .attacks .item:first-line { font-size: 13px; line-height: 1; }
+li.card .item { float: left; padding-top: 0; font-size: 12px; line-height: 1; white-space: nowrap; }
+li.card .item img { float: left; margin-right: 3px; }
+li.card .cost, .attacks.attacking .cost, li.card .points { font-weight: normal; color: #333; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
+li.card .cost, .attacks.attacking .cost { float: right; margin-right: 1px; background-color: #FFF; padding: 2px; margin-top: 0; }
+.attacks.attacking .cost { float: left; }
+li.card .points { position: absolute; bottom: 2px; left: 2px; height: 23px; font-size: 17px; width: 191px; background-color: #FFF; padding: 0; }
+li.card.small .points { font-size: 12px; height: 17px; padding-top: 2px; width: 73px; }
+li.card .points div { float: right; margin: 0 0 0 5px; }
+li.card.small .points div { margin: 0 0 0 5px; }
+li.card .points div.magic { margin-right: 5px; }
+.magic { color: blueviolet; }
+.defence { color: darkolivegreen; }
+.attack { color: #AC2808; }
+.gold { color: gold; }
+.character_setup .cards li.card { margin-right: -195px; }
+
+.admin-menu ul { margin: 7px; }
+.admin-menu ul li { margin: 0 0 10px 0; line-height: 1.2; list-style: none; }
+.admin-menu ul li a { font-weight: bold; border-bottom: 1px dotted #CCC; }
