--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -662,9 +662,16 @@ li.card .points div.magic { margin-right: 5px; }
 .admin-menu ul li { margin: 0 0 10px 0; line-height: 1.2; list-style: none; }
 .admin-menu ul li a { font-weight: bold; border-bottom: 1px dotted #CCC; }
 
-fieldset { border-top: 1px dotted #CCC; padding: 5px 15px; margin-top: 15px; }
+fieldset { border-top: 1px dotted #CCC; padding: 5px 15px; margin-top: 15px; clear: both; }
+fieldset div { clear: both; min-height: 30px; }
 fieldset > fieldset { margin-top: 25px; }
 legend { background-color: #FFF; font-size: 1.2em; font-weight: normal; padding: 5px 15px; margin-left: 30px; }
-label { font-size: 1em; font-weight: bold; display: block; padding: 2px 0; float: left; min-width: 130px; text-align: right; margin-right: 10px; }
+label { font-size: 1em; font-weight: bold; display: block; padding: 4px 0; float: left; min-width: 130px; text-align: right; margin-right: 10px; }
 input[type=text] { width: 300px; padding: 3px; font-size: 0.9em; }
+select { font-size: 0.9em; }
+textarea { padding: 3px; width: 300px; height: 100px; }
 input.points { width: 50px; }
+input.long, textarea.long { width: 500px; }
+
+::-webkit-input-placeholder  { color:#AAA; }
+input:-moz-placeholder { color:#AAA; }
