--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -669,7 +669,7 @@ label { font-size: 1em; font-weight: bold; display: block; padding: 4px 0; float
 input[type=text] { width: 300px; padding: 3px; font-size: 0.9em; }
 select { font-size: 0.9em; }
 textarea { padding: 3px; width: 300px; height: 100px; }
-input.points { width: 50px; }
+input.points { width: 50px; text-align: right; }
 input.long, textarea.long { width: 500px; }
 
 ::-webkit-input-placeholder  { color:#AAA; }
