--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -675,3 +675,4 @@ input.long, textarea.long { width: 500px; }
 ::-webkit-input-placeholder  { color:#AAA; }
 input:-moz-placeholder { color:#AAA; }
 .error { color: darkred; }
+#potionitemcard_form #resource_fieldset { display: none; }
