--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -119,7 +119,7 @@ h5 { font-size: 1.2em; padding: 2px 8px; }
 h6 { font-size: 1.1em; padding: 1px 10px; }
 
 body, html { height: 100%; overflow: auto; }
-body { background: url('/images/mainbg.png'); }
+body { background: url('/images/bg.jpg'); }
 
 /* fullpage (faded out) backdrop styling */
 .semi_transparent { filter:alpha(opacity=40); -moz-opacity:.40; opacity:.40; }
@@ -197,10 +197,8 @@ body { background: url('/images/mainbg.png'); }
 
 #header-strip {
 	z-index: 10000;
-	border-top: 1px solid #DDD;
-	border-bottom: 1px solid #DDD;
 	width: 100%;
-	padding: 5px 0;
+	padding: 0;
 	font-size: 1.3em;
 	margin-top: 0;
 	position: absolute;
@@ -210,6 +208,16 @@ body { background: url('/images/mainbg.png'); }
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	clear: both;
+}
+
+.header-content { 
+	margin: 0 auto; 
+	width: 980px;
+	font-size: 1.2em;
+	padding: 10px 15px;
+	border-top: 1px solid #DDD;
+	border-bottom: 1px solid #DDD;
 	background: -moz-linear-gradient(top, #FFFFFF 0%, #F1F1F1 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#F1F1F1)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top, #FFFFFF 0%,#F1F1F1 100%); /* Chrome10+,Safari5.1+ */
@@ -217,10 +225,7 @@ body { background: url('/images/mainbg.png'); }
 	background: -ms-linear-gradient(top, #FFFFFF 0%,#F1F1F1 100%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F1F1F1',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #FFFFFF 0%,#F1F1F1 100%); /* W3C */
-	clear: both;
 }
-
-.header-content { margin: 0 auto; width: 1000px; padding: 5px; font-size: 1.2em; }
 .header-logo { font-size: 0.5em; color: #000; font-weight: normal; line-height: 1.2; display: block; border: 0; text-decoration: none; }
 .header-logo:first-line { font-size: 1.5em; font-weight: bold; }
 #header-strip ul { list-style: none; margin: 3px 0 0 0; padding: 0; float: right; }
@@ -270,12 +275,15 @@ body { background: url('/images/mainbg.png'); }
 }
 
 .main-content div.content { padding: 10px; }
+.pergament { background: url('/images/mainbg.jpg') no-repeat top left; }
+.pergament .content { text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.9); }
 .main-content div.game-intro b { font-family: 'Chelsea Market'; }
 
 .element-badge {
 	width: 300px;
 	height: 50px;
 	text-align: center;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 	font-size: 1.8em;
 	font-family: 'Fredericka the Great';
 	font-weight: normal;
@@ -292,6 +300,7 @@ body { background: url('/images/mainbg.png'); }
 	float: left;
 	margin-right: 0;
 	margin-left: 11px;
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
 }
 .element-badge img { float: left; margin-right: 10px; margin-left: 5px; }
 .element-badge div { margin-top: 12px; }
@@ -654,7 +663,7 @@ li.card .points div.magic { margin-right: 5px; }
 .magic { color: blueviolet; }
 .defence { color: darkolivegreen; }
 .attack { color: #AC2808; }
-.gold { color: gold; }
+.gold { color: darkorange; }
 .character_setup .cards li.card { margin-right: -195px; }
 
 .admin-menu ul { margin: 7px; }
