--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -204,18 +204,7 @@ body { background: url('/images/bg.jpg'); }
 	position: absolute;
 	top: 0;
 	left: 0;
-	font-family: 'Chelsea Market';
-	box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-	clear: both;
-}
-
-.header-content { 
-	margin: 0 auto; 
-	width: 980px;
-	font-size: 1.2em;
-	padding: 10px 15px;
+	padding: 0;
 	border-top: 1px solid #DDD;
 	border-bottom: 1px solid #DDD;
 	background: -moz-linear-gradient(top, #FFFFFF 0%, #F1F1F1 100%); /* FF3.6+ */
@@ -225,6 +214,18 @@ body { background: url('/images/bg.jpg'); }
 	background: -ms-linear-gradient(top, #FFFFFF 0%,#F1F1F1 100%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#F1F1F1',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #FFFFFF 0%,#F1F1F1 100%); /* W3C */
+	font-family: 'Chelsea Market';
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	clear: both;
+}
+
+.header-content { 
+	margin: 0 auto;
+	padding: 10px 15px;
+	width: 980px;
+	font-size: 1.2em;
 }
 .header-logo { font-size: 0.5em; color: #000; font-weight: normal; line-height: 1.2; display: block; border: 0; text-decoration: none; }
 .header-logo:first-line { font-size: 1.5em; font-weight: bold; }
@@ -274,8 +275,8 @@ body { background: url('/images/bg.jpg'); }
 	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-.main-content div.content { padding: 10px; }
-.pergament { background: url('/images/mainbg.jpg') no-repeat top left; }
+.main-content div.content { padding: 10px; line-height: 1.2; }
+.pergament { background: url('/images/mainbg.jpg') no-repeat top left; border-radius: 10px; }
 .pergament .content { text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.9); }
 .main-content div.game-intro b { font-family: 'Chelsea Market'; }
 
@@ -685,3 +686,29 @@ input.long, textarea.long { width: 500px; }
 input:-moz-placeholder { color:#AAA; }
 .error { color: darkred; }
 #potionitemcard_form #resource_fieldset { display: none; }
+
+#card-1 {
+  margin: 0;
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  z-index:2;
+  left:70px;
+  top:10px;
+}
+
+#card-2 {
+  background-color:#69732B;
+  margin: 0;
+  z-index:3;
+}
+
+#card-3 {
+  margin: 0;
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  z-index:2;
+  right:70px;
+  top:10px;
+}
+
+.smaller { font-size: 0.8em; }
