--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,8 @@
 
-@import url('http://fonts.googleapis.com/css?family=Chelsea+Market');
+/*@import url('http://fonts.googleapis.com/css?family=Chelsea+Market');
 @import url('http://fonts.googleapis.com/css?family=Fredericka+the+Great');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic');
+@import url('http://fonts.googleapis.com/css?family=IM+Fell+English+SC');*/
 
 /*
 html5doctor.com Reset Stylesheet
@@ -119,7 +120,7 @@ h5 { font-size: 1.2em; padding: 2px 8px; }
 h6 { font-size: 1.1em; padding: 1px 10px; }
 
 body, html { height: 100%; overflow: auto; }
-body { background: url('/images/bg.jpg'); }
+body { background: url('/images/bg.jpg') no-repeat top center; background-color: #000; }
 
 /* fullpage (faded out) backdrop styling */
 .semi_transparent { filter:alpha(opacity=40); -moz-opacity:.40; opacity:.40; }
@@ -266,13 +267,13 @@ body { background: url('/images/bg.jpg'); }
 	width: 1000px;
 	font-size: 0.9em;
 	background-color: #FFF;
+	border: 1px solid rgba(0, 0, 0, 0.2);
 	border-top: none;
-	border-bottom: none;
-	border-left: 1px solid rgba(0, 0, 0, 0.2);
-	border-right: 1px solid rgba(0, 0, 0, 0.2); 
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
 }
 
 .main-content div.content { padding: 10px; line-height: 1.2; }
@@ -556,7 +557,7 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 /*.button-orange:active { background: #f09c15; }*/
 /*----------------------------*/
 
-.profile-intro { font-size: 1.2em; padding: 5px; color: #555; font-weight: normal; }
+.profile-intro { font-family: 'IM Fell English SC'; font-size: 1.4em; padding: 5px; color: #555; font-weight: normal; }
 
 .character_setup { color: #444; }
 .character_setup label { float: left; padding: 4px 4px 4px 0; }
@@ -712,3 +713,54 @@ input:-moz-placeholder { color:#AAA; }
 }
 
 .smaller { font-size: 0.8em; }
+
+.message_banner {
+	background: url('/images/mainbg.jpg') no-repeat -20px -20px;
+	border-radius: 5px;
+	padding: 5px;
+	border: 1px rgba(0, 0, 0, 0.2) dashed;
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	font-family: 'IM Fell English SC';
+	color: #000;
+	font-size: 22px;
+	font-weight: normal;
+	text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
+#game-table { background: url('/images/table_bg.jpg') no-repeat -350px -200px; padding: 0; position: relative; clear: both; border-color: transparent;  border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8); -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8); -moz-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8); }
+.card-slots-container {
+	height: 200px;
+	clear: both;
+	width: 800px;
+	margin: 0 auto;
+	padding: 10px;
+}
+.card-slots {
+	clear: both;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+li.card-slot {
+	list-style: none;
+}
+.card-slot {
+	margin: 0 5px 5px 5px;
+	padding: 0;
+	width: 140px;
+	background-color: rgba(200, 200, 200, 0.1);
+	border: 2px dashed rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+	height: 190px;
+	float: left;
+}
+#event-slot {
+	background-color: rgba(0, 0, 255, 0.1);
+	position: absolute;
+	left: 10px;
+	top: 4px;
+}
+#play-area {
+	clear: both;
+	position: relative;
+}
