--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -542,9 +542,9 @@ h6 {
 }
 
 footer {
-	margin-top: 150px;
+	margin-top: 60px;
 	color: #CBB66F;
-	margin-bottom: 20px;
+	padding-bottom: 20px;
 }
 footer .border-container {
 	margin-bottom: 5px;
@@ -616,9 +616,15 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 	line-height: 17px !important;
 	height: auto;
 	margin: 0;
-	padding: 1px 3px !important;
+	padding: 3px 5px !important;
 	font-size: 12px;
 	text-decoration: none;
+	box-sizing: initial;
+	-webkit-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	width: auto;
+	letter-spacing: -1px;
 	border: 1px solid #AAA; /* Fallback style */
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	-moz-border-radius: 2px;
@@ -645,20 +651,41 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 .button-icon img, .button-icon:hover img { margin: 1px; float: none; }
 .button a, .button a:hover, .button a:visited, .button a:active { color: #FFF; }
 
-.button-silver, .button.disabled, .button.disabled:active, .button.disabled:hover, button, input[type=submit], input[type=submit]:hover {
+.button-standard, .button-standard:hover, button, button:hover, input[type=submit], input[type=submit]:hover {
+	background: -moz-linear-gradient(top, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: -khtml-gradient(linear, left top, left bottom, color-stop(0%,#7D5E3C), color-stop(50%,#957249), color-stop(50%,#86643E), color-stop(100%,#BF9663));
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7D5E3C), color-stop(50%,#957249), color-stop(50%,#86643E), color-stop(100%,#BF9663));
+	background: -webkit-linear-gradient(top, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: -o-linear-gradient(top, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: -ms-linear-gradient(top, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: linear-gradient(to bottom, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	border: 1px solid #503620;
+	color: #FFF;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8), -1px -1px 1px rgba(0, 0, 0, 0.8), 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.button-standard:active, input[type=submit]:active, button:active, input[type=submit].button-pressed, button.button-pressed {
+	background: -moz-linear-gradient(bottom, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: -khtml-gradient(linear, left bottom, left top, color-stop(0%,#7D5E3C), color-stop(50%,#957249), color-stop(50%,#86643E), color-stop(100%,#BF9663));
+	background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,#7D5E3C), color-stop(50%,#957249), color-stop(50%,#86643E), color-stop(100%,#BF9663));
+	background: -webkit-linear-gradient(bottom, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: -o-linear-gradient(bottom, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: -ms-linear-gradient(bottom, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+	background: linear-gradient(to top, #7D5E3C 0%, #957249 50%, #86643E 50%, #BF9663 100%);
+}
+.button-silver, .button.disabled, .button.disabled:active, .button.disabled:hover {
 	background: #c5c5c5;
 	background: -webkit-gradient(linear, left top, left bottom, from(#F5F5F5), to(#E5E5E5) );
 	background: -moz-linear-gradient(-90deg, #F5F5F5, #E5E5E5);
 	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#f5f5f5', EndColorStr='#e5e5e5');
 }
 
-.button-silver:active, input[type=submit]:active, button:active, input[type=submit].button-pressed, button.button-pressed, .button-silver.button-pressed {
+.button-silver:active, .button-silver.button-pressed {
 	background: #eaeaea;
 	background: -webkit-gradient(linear, left top, left bottom, from(#c5c5c5), to(#eaeaea) );
 	background: -moz-linear-gradient(-90deg, #c5c5c5, #eaeaea);
 	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#c5c5c5', EndColorStr='#eaeaea');
 }
-.button-silver, input[type=submit], button, input[type=submit].button-silver, button.button-silver, a.button-silver, .button-silver:active, button.button-silver:active, input[type=submit].button-silver:active, a.button-silver:active { color: #555; text-shadow: 1px 1px #FFF; box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none; }
+.button-silver, input[type=submit], button, input[type=submit].button-silver, button.button-silver, a.button-silver, .button-silver:active, button.button-silver:active, input[type=submit].button-silver:active, a.button-silver:active { color: #222; text-shadow: 1px 1px #FFF; box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none; }
 .button.disabled { color: #AAA !important; text-shadow: 1px 1px 0px #FFF; }
 /*----------------------------*/
 .button-khaki, input[type=submit].button-khaki {
@@ -907,10 +934,6 @@ li.card .points div.magic { margin-right: 5px; }
 .attack { color: #AC2808; }
 .gold { color: darkorange; }
 .character_setup .cards li.card { margin-right: -195px; }
-
-.admin-menu ul { margin: 7px; }
-.admin-menu ul li { margin: 0 0 10px 0; line-height: 1.2; list-style: none; }
-.admin-menu ul li a { font-weight: bold; border-bottom: 1px dotted #CCC; }
 
 fieldset { border-top: 1px dotted #CCC; padding: 5px 15px; margin-top: 15px; clear: both; }
 fieldset div { clear: both; min-height: 30px; }
