--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -315,7 +315,8 @@ h6 {
 
 .banner-container { position: relative; padding: 0; margin: 0; }
 .devo-box {
-	font-size: 1.3em;
+	font-size: 2.7em;
+	font-weight: bold;
 	padding: 20px 20px 20px 35px;
 	border: none;
 	position: absolute;
@@ -332,15 +333,41 @@ h6 {
 	-ms-transition: text-shadow 0.5s ease-in-out;
 	transition: text-shadow 0.5s ease-in-out;
 	font-family: 'Fredericka the Great';
+	line-height: 0.7;
 }
-.devo-box:first-line {
-	font-size: 2.4em;
-	font-weight: bold;
-	text-transform: uppercase;
+.devo-box .slogan {
+	line-height: 0.7;
+	font-size: 0.6em;
+	font-weight: normal;
+	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8),
+				1px -1px 0 rgba(0, 0, 0, 0.8),
+				-1px 1px 0 rgba(0, 0, 0, 0.8),
+				-1px -1px 0 rgba(0, 0, 0, 0.8),
+				0 0 10px rgba(0, 0, 0, 1);
+	-webkit-transition: text-shadow 0.5s ease-in-out;
+	-moz-transition: text-shadow 0.5s ease-in-out;
+	-o-transition: text-shadow 0.5s ease-in-out;
+	-ms-transition: text-shadow 0.5s ease-in-out;
+	transition: text-shadow 0.5s ease-in-out;
 }
 .devo-box:hover {
 	color: #FFF;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8), -1px -1px 1px rgba(0, 0, 0, 0.8), 0 0 5px rgba(101, 193, 218, 1), 0 0 7px rgba(101, 193, 218, 0.8), 0 0 13px rgba(101, 193, 218, 0.6);
+	-webkit-transition: text-shadow 0.5s ease-in-out;
+	-moz-transition: text-shadow 0.5s ease-in-out;
+	-o-transition: text-shadow 0.5s ease-in-out;
+	-ms-transition: text-shadow 0.5s ease-in-out;
+	transition: text-shadow 0.5s ease-in-out;
+}
+.devo-box:hover .slogan {
+	color: #FFF;
+	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8),
+				1px -1px 0 rgba(0, 0, 0, 0.8),
+				-1px 1px 0 rgba(0, 0, 0, 0.8),
+				-1px -1px 0 rgba(0, 0, 0, 0.8),
+				0 0 5px rgba(101, 193, 218, 1),
+				0 0 7px rgba(101, 193, 218, 0.8),
+				0 0 13px rgba(101, 193, 218, 0.6);
 	-webkit-transition: text-shadow 0.5s ease-in-out;
 	-moz-transition: text-shadow 0.5s ease-in-out;
 	-o-transition: text-shadow 0.5s ease-in-out;
@@ -533,12 +560,46 @@ h6 {
 .content.full {
 	padding: 10px;
 }
+.content.login {
+	width: 400px;
+	margin: 40px auto 0 auto;
+}
 
 .social-buttons {
 	padding: 5px;
 }
-.social-buttons img {
-	width: 36px;
+.social-buttons.large img, .social-buttons.large a:active img {
+	width: 50px;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+}
+.social-buttons img, .social-buttons a:active img {
+	width: 30px;
+	margin-right: 4px;
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+	-moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+	-webkit-transition: margin 0.25s ease-in-out, -webkit-box-shadow 0.25s ease-in-out;
+	-moz-transition: margin 0.25s ease-in-out, -moz-box-shadow 0.25s ease-in-out;
+	-o-transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+	-ms-transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+	transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+.social-buttons img:hover {
+	margin-top: -5px;
+	margin-bottom: 5px;
+	box-shadow: 0 0 3px rgba(175, 231, 255, 1), 0 0 8px rgba(175, 231, 255, 0.8), 0 0 13px rgba(175, 231, 255, 0.6);
+	-moz-box-shadow: 0 0 3px rgba(175, 231, 255, 1), 0 0 8px rgba(175, 231, 255, 0.8), 0 0 13px rgba(175, 231, 255, 0.6);
+	-webkit-box-shadow: 0 0 3px rgba(175, 231, 255, 1), 0 0 8px rgba(175, 231, 255, 0.8), 0 0 13px rgba(175, 231, 255, 0.6);
+	-webkit-transition: margin 0.25s ease-in-out, -webkit-box-shadow 0.25s ease-in-out;
+	-moz-transition: margin 0.25s ease-in-out, -moz-box-shadow 0.25s ease-in-out;
+	-o-transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+	-ms-transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+	transition: margin 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
 }
 
 footer {
@@ -685,7 +746,7 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 	background: -moz-linear-gradient(-90deg, #c5c5c5, #eaeaea);
 	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#c5c5c5', EndColorStr='#eaeaea');
 }
-.button-silver, input[type=submit], button, input[type=submit].button-silver, button.button-silver, a.button-silver, .button-silver:active, button.button-silver:active, input[type=submit].button-silver:active, a.button-silver:active { color: #222; text-shadow: 1px 1px #FFF; box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none; }
+.button-silver, input[type=submit].button-silver, button.button-silver, a.button-silver, .button-silver:active, button.button-silver:active, input[type=submit].button-silver:active, a.button-silver:active { color: #222; text-shadow: 1px 1px #FFF; box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none; }
 .button.disabled { color: #AAA !important; text-shadow: 1px 1px 0px #FFF; }
 /*----------------------------*/
 .button-khaki, input[type=submit].button-khaki {
@@ -832,117 +893,64 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 .character_setup input[type="submit"] { padding: 3px; font-weight: bold; }
 
 .cards { overflow: visible; padding: 0; height: 200px; list-style: none; margin: 0; }
-li.card {
+li.cards { list-style: none; }
+.card {
     z-index: 5;
-    float: left;
-    background: url('/images/cardbg.png') no-repeat -1px -1px;
+    background: url('/images/card.png') no-repeat top left;
     color: black;
-    text-shadow: 1px 1px 0px #AAA;
-    border-width: 3px;
-    border-style: double;
-    border-color: #CCA;
-    cursor: pointer;
-    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
-    padding: 3px;
-    width: 190px;
-    height: 290px;
+    width: 264px;
+	padding: 0;
+    height: 355px;
     position: relative;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+li.card {
+	float: left;
     margin-right: 5px;
 }
-.stacked li.card, .stacked li.card:hover {
-    margin-right: -155px;
-}
-li.card.flipped {
-    background: url('/images/card_flipside.png') no-repeat -2px -2px;
-}
 
-li.card.flipped.small {
-    background: url('/images/card_flipside_small.png') no-repeat top left;
-}
-
-li.card.flipped .picture, li.card.flipped .hp, li.card.flipped .ep, li.card.flipped .name, li.card.flipped .level, li.card.flipped .faction, li.card.flipped .special, li.card.flipped .item, li.card.flipped .attacks, li.card.flipped .cost, li.card.flipped .points { display: none; }
-
-li.card.small {
-    width: 72px;
-    height: 110px;
-    margin-right: 5px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5); -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5); -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-}
-.stacked li.card.small, .stacked li.card.small:hover {
-    margin-right: -60px;
-}
-
-li.card:hover { margin-right: 0; }
-li.card.unselectable:hover, li.card.picked.small:hover { margin-right: -155px; }
-
-li.card.opponent { cursor: default; }
-li.card.picked { margin-top: -40px; }
-li.card.small.picked { margin-top: 10px; }
-li.card.flipped.picked { margin-top: 10px; }
-li.card.nohide { margin-right: 5px; }
-
-li.card .name { text-shadow: 1px 1px 0px #EEE; font-size: 17px; font-weight: bold; color: #000; }
-li.card.small .name { text-shadow: 1px 1px 0px #EEE; font-size: 10px; font-weight: normal; color: #000; }
-li.card .level { position: absolute; padding: 0; line-height: 1; top: 0; right: 5px; font-size: 35px; font-weight: normal; text-shadow: 2px 2px 3px #666; color: #fdff82; }
-li.card.small .level { right: 3px; top: 15px; font-size: 14px; font-weight: normal; text-shadow: 1px 1px 0px #666; color: #fdff82; }
-
-li.card .hp, li.card.mine .card_damage { position: absolute; width: 50px; height: 35px; z-index: 10; padding: 6px 0 0 0; text-align: center; line-height: 1; bottom: 0px; left: 0px; font-size: 27px; font-weight: normal; text-shadow: 1px 1px 2px #666; color: #FFF; background: url('heart_small.png') no-repeat top left; }
-li.card.mine .card_damage { background: transparent; position: absolute; width: 150px; left: -50px; color: red; text-align: center; z-index: 1000; text-shadow: 2px 2px 4px darkred; }
-li.card .ep { position: absolute; width: 50px; height: 35px; z-index: 10; padding: 6px 0 0 0; text-align: center; line-height: 1; bottom: 0px; left: 40px; font-size: 27px; font-weight: normal; text-shadow: 1px 1px 2px #666; color: #FFF; background: url('magic_small.png') no-repeat top left; }
-li.card.small .hp { top: 35px; left: 0; height: 50px; font-size: 22px; padding-top: 12px; }
-li.card.opponent .hp, li.card.opponent .card_damage { top: 180px; left: 70px; padding-top: 8px; height: 50px; font-size: 27px; }
-li.card.opponent .card_damage { position: absolute; color: red; width: 150px; left: 20px; text-align: center; top: 177px; z-index: 1000; text-shadow: 2px 2px 4px darkred; }
-li.card.small.opponent .hp { top: 40px; left: 13px; height: 50px; font-size: 22px; padding-top: 12px; }
-li.card.small .ep { top: 35px; left: 30px; height: 50px; font-size: 22px; padding-top: 12px; }
-
-li.card .picture {
-    width: 190px;
-    height: 105px;
-    margin-left: 0;
-    margin-bottom: 0;
-    overflow: hidden;
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2); -webkit-box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2); -moz-box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+.card .name {
+	position: absolute;
+	top: 14px;
+	left: 20px;
+	font-size: 1em;
+	font-weight: bold;
+	letter-spacing: -1px;
+	font-family: 'Metamorphous';
+	color: #FFF;
+	text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, 1px 1px 0 #000, 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 #opponents_hand { display: none; }
 
-li.card.small .picture, li.card.small .description, li.card.small .special, li.card.small .attacks, li.card.small .item, li.card.small .cost { display: none; }
-li.card .faction { font-size: 14px; font-weight: normal; line-height: 1; margin-bottom: 3px; }
-li.card.small .faction { font-size: 10px; font-weight: normal; }
-li.card.faction_rutai .faction { color: blue; }
-li.card.faction_resistance .faction { color: red; }
-li.card.faction_neutrals .faction { color: white; font-weight: bold; }
-li.card .description { font-weight: normal; font-size: 12px; }
-li.card .special, li.card .attacks { font-weight: normal; margin-top: 5px; font-size: 13px; }
-li.card .special .entry { font-weight: normal; height: 17px; clear: both; }
-li.card .attacks .entry { font-weight: normal; height: 30px; clear: both; }
-li.card .attacks .item:first-line { font-size: 13px; line-height: 1; }
-li.card .item { float: left; padding-top: 0; font-size: 12px; line-height: 1; white-space: nowrap; }
-li.card .item img { float: left; margin-right: 3px; }
-li.card .cost, .attacks.attacking .cost, li.card .points { font-weight: normal; color: #333; border-radius: 3px; -moz-border-radius: 3px; -webkit-border-radius: 3px; }
-li.card .cost, .attacks.attacking .cost { float: right; margin-right: 1px; background-color: #FFF; padding: 2px; margin-top: 0; }
-.attacks.attacking .cost { float: left; }
-li.card .points { position: absolute; bottom: 2px; left: 2px; height: 23px; font-size: 17px; width: 191px; background-color: #FFF; padding: 0; }
-li.card.small .points { font-size: 12px; height: 17px; padding-top: 2px; width: 73px; }
-li.card .points div { float: right; margin: 0 0 0 5px; }
-li.card.small .points div { margin: 0 0 0 5px; }
-li.card .points div.magic { margin-right: 5px; }
 .magic { color: blueviolet; }
 .defence { color: darkolivegreen; }
 .attack { color: #AC2808; }
 .gold { color: darkorange; }
 .character_setup .cards li.card { margin-right: -195px; }
 
-fieldset { border-top: 1px dotted #CCC; padding: 5px 15px; margin-top: 15px; clear: both; }
+fieldset { border-top: 1px dotted rgba(72, 48, 28, 0.8); padding: 5px 15px; margin-top: 15px; clear: both; }
 fieldset div { clear: both; min-height: 30px; }
 fieldset > fieldset { margin-top: 25px; }
-legend { background-color: #FFF; font-size: 1.2em; font-weight: normal; padding: 5px 15px; margin-left: 30px; }
-label { font-size: 1em; font-weight: bold; display: block; padding: 4px 0; float: left; min-width: 130px; text-align: right; margin-right: 10px; }
-input[type=text] { width: 300px; padding: 3px; font-size: 0.9em; }
+legend { background-color: transparent; font-size: 1.2em; font-weight: normal; padding: 5px 15px; margin-left: 30px; }
+label { font-size: 1em; font-weight: bold; font-style: italic; display: block; padding: 4px 0; float: left; min-width: 130px; text-align: right; margin-right: 10px; }
+input[type=text], input[type=password] {
+	width: 300px;
+	padding: 3px;
+	font-size: 0.9em;
+	border: 2px solid rgba(80, 54, 32, 0.6);
+	color: #000;
+}
 select { font-size: 0.9em; }
-textarea { padding: 3px; width: 300px; height: 100px; }
+textarea { 
+	padding: 3px;
+	width: 300px;
+	height: 100px;
+	border: 2px solid rgba(80, 54, 32, 0.6);
+}
 input.points { width: 50px; text-align: right; }
 input.long, textarea.long { width: 500px; }
 
